--- a/README
+++ b/README
@@ -1,4 +1,4 @@
--I have no idea how badly u fucked up this thing by doing what i did...
+-I have no idea how badly i fucked up this thing by doing what i did...
 
 shfm
 ________________________________________________________________________________
