--- a/README
+++ b/README
@@ -33,6 +33,7 @@ h - go up level
 y - yank file
 p - paste yanked file
 d - delete file
+t - toggle print directories first
 g - go to top
 G - go to bottom
 q - quit
@@ -59,7 +60,7 @@ todo
 ________________________________________________________________________________
 
 - [x] sanitize filenames for display.
-- [ ] print directories first (hard).
+- [x] print directories first (hard).
 - [x] fix buggy focus after exit from inline editor.
 - [x?] maybe file operations.
 - [x] add / to directories.
