--- a/README
+++ b/README
@@ -1,4 +1,4 @@
--What ever the fucks am I doing?
+-What even the fucks am I doing?
 
 shfm
 ________________________________________________________________________________
